[gd_scene load_steps=7 format=3 uid="uid://dii67hel2ee47"]

[ext_resource type="Script" path="res://Scripts/Player/player_3.gd" id="1_1pdnu"]
[ext_resource type="Texture2D" uid="uid://dto0x6i1xa51" path="res://Asset/People/boy-no-bg.png" id="1_eof8x"]
[ext_resource type="Texture2D" uid="uid://b3sar5e6tg3a7" path="res://Asset/cursor1.png" id="2_1dpxh"]
[ext_resource type="FontFile" uid="uid://qa4nvvmd0bqq" path="res://Asset/Fonts/Oswald-Medium.ttf" id="3_x18jq"]
[ext_resource type="FontFile" uid="uid://bywjg8rn0lumq" path="res://Asset/Fonts/manrope-medium.otf" id="4_qywxm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrgtq"]
size = Vector2(87, 95)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_1pdnu")
hover_cursor = ExtResource("2_1dpxh")

[node name="ArmyMan-no-bg" type="Sprite2D" parent="."]
scale = Vector2(0.181009, 0.256757)
texture = ExtResource("1_eof8x")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(58.5, 47.5)
shape = SubResource("RectangleShape2D_mrgtq")

[node name="ConversationUI" type="CanvasLayer" parent="."]
visible = false

[node name="Conversation" type="Control" parent="ConversationUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 203.0
offset_top = 38.0
offset_right = -307.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layer1" type="Control" parent="ConversationUI/Conversation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.901961, 0.72549, 1)

[node name="Bar" type="ColorRect" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_top = 3.0
offset_right = 642.0
offset_bottom = 25.0
color = Color(0.639216, 0.784314, 0.956863, 1)

[node name="Label" type="Label" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.5
offset_top = -3.0
offset_right = 50.5
offset_bottom = 27.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x18jq")
theme_override_font_sizes/font_size = 20
text = "Inventory"

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_left = 14.0
offset_top = 59.0
offset_right = 609.0
offset_bottom = 99.0
item_count = 3
popup/item_0/text = "All Items"
popup/item_1/text = "Animals"
popup/item_1/id = 1
popup/item_2/text = "Clothing"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_left = 22.0
offset_top = 117.0
offset_right = 153.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Your Max Buy"

[node name="Label3" type="Label" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_left = 433.0
offset_top = 117.0
offset_right = 526.0
offset_bottom = 146.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Unit Cost"

[node name="Label4" type="Label" parent="ConversationUI/Conversation/Layer1"]
layout_mode = 0
offset_left = 566.0
offset_top = 120.0
offset_right = 614.0
offset_bottom = 149.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Cost"

[node name="Label5" type="Label" parent="ConversationUI/Conversation/Layer1"]
offset_left = 27.0
offset_top = 454.0
offset_right = 223.0
offset_bottom = 483.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "You Have$    1564.00"

[node name="Label6" type="Label" parent="ConversationUI/Conversation/Layer1"]
offset_left = 446.0
offset_top = 453.0
offset_right = 611.0
offset_bottom = 482.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Total Cost $ 0.00"

[node name="Options" type="Control" parent="ConversationUI/Conversation"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Roll For Max Buy" type="VBoxContainer" parent="ConversationUI/Conversation/Options"]
layout_mode = 0
offset_left = 20.0
offset_top = 149.0
offset_right = 640.0
offset_bottom = 587.0
theme_override_constants/separation = 20

[node name="ItemsRolls" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="ItemsRolls2" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls2"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls2/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="ItemsRolls3" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls3"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls3/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="ItemsRolls4" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls4"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls4/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="ItemsRolls5" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls5"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls5/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls5/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="ItemsRolls6" type="VBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls6"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="OptionButton" type="OptionButton" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls6/HBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "0"
popup/item_0/disabled = true
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4
popup/item_5/text = "5"
popup/item_5/id = 5

[node name="Label" type="Label" parent="ConversationUI/Conversation/Options/Roll For Max Buy/ItemsRolls6/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "Conestoga Waggons"

[node name="VBoxContainer" type="VBoxContainer" parent="ConversationUI/Conversation/Options"]
layout_mode = 0
offset_left = 432.0
offset_top = 145.0
offset_right = 645.0
offset_bottom = 589.0
theme_override_constants/separation = 15

[node name="CostRoll" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll2" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll2"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll3" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll3"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll4" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll4"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll5" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll5"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll5/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll5/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll6" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll6"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll6/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll6/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="CostRoll7" type="VBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll7"]
layout_mode = 2
theme_override_constants/separation = 70

[node name="Cost" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll7/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "110.00"

[node name="Cost2" type="Label" parent="ConversationUI/Conversation/Options/VBoxContainer/CostRoll7/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_qywxm")
theme_override_font_sizes/font_size = 20
text = "0.00"

[node name="Purchsase" type="Button" parent="ConversationUI/Conversation"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 73.0
offset_top = 513.0
offset_right = 203.0
offset_bottom = 553.0
theme_override_fonts/font = ExtResource("3_x18jq")
text = "Purchsase"

[node name="Cancel" type="Button" parent="ConversationUI/Conversation"]
modulate = Color(0.968627, 0.901961, 0.72549, 1)
layout_mode = 0
offset_left = 387.0
offset_top = 513.0
offset_right = 517.0
offset_bottom = 553.0
theme_override_fonts/font = ExtResource("3_x18jq")
text = "Cancel"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ConversationUI/Conversation/Purchsase" to="." method="_on_purchsase_pressed"]
[connection signal="pressed" from="ConversationUI/Conversation/Cancel" to="." method="_on_cancel_pressed"]
